chore: align frontend coding standards

--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -41,6 +41,7 @@
     "genericError": "发生错误：{{error}}"
   },
   "approval": {
+    "title": "需要审批",
     "status": {
       "pending": "等待审批",
       "approved": "已批准",
