--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -41,6 +41,7 @@
     "genericError": "Error: {{error}}"
   },
   "approval": {
+    "title": "Approval Required",
     "status": {
       "pending": "Pending",
       "approved": "Approved",
