--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -26,6 +26,11 @@
       "custom": "Custom (config.toml)"
     }
   },
+  "models": {
+    "gpt52High": "gpt-5.2 (high)",
+    "gpt52": "gpt-5.2",
+    "gpt41": "gpt-4.1"
+  },
   "sidebar": {
     "show": "Show sidebar",
     "toggle": "Toggle sidebar",
