Make terminal panel resizable

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -36,6 +36,7 @@
   "terminalPanel": {
     "title": "Terminal",
     "close": "Close",
+    "resizeAria": "Resize terminal",
     "starting": "Starting terminal..."
   },
   "models": {
