--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -36,6 +36,7 @@
   "terminalPanel": {
     "title": "终端",
     "close": "关闭",
+    "resizeAria": "调整终端宽度",
     "starting": "正在启动终端..."
   },
   "models": {
