Remove approval feedback inputs

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -76,10 +76,8 @@
     "section": {
       "description": "Description",
       "command": "Command",
-      "changes": "Changes",
-      "feedback": "Rejection feedback"
-    },
-    "feedbackPlaceholder": "Optional reason for rejection"
+      "changes": "Changes"
+    }
   },
   "toolCall": {
     "status": {
