feat(ui): replace web button with remote servers in ChatSideActions
- Changed last button from 'web' to 'remote'
- Updated icon from GlobeIcon to ServerIcon
- Added translations for remote servers in en-US and zh-CN

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -31,7 +31,7 @@
     "files": "Files",
     "tools": "Tools",
     "terminal": "Terminal",
-    "web": "Web"
+    "remote": "Remote Servers"
   },
   "terminalPanel": {
     "title": "Terminal",
