feat: implement Settings Panel Phase 2
Features added:
- Remote Server Settings: Integrates existing RemoteServerManager component
- Settings Search: Filter navigation items by keywords (supports both
  Chinese and English keywords)

Search functionality:
- Real-time filtering of navigation items
- Auto-select first matching section when search filters results
- Support for category names and related keywords
- Clear button to reset search

UI improvements:
- Search input with clear button in navigation sidebar
- Empty state message when no search results
- Smooth transitions for search interactions

i18n:
- Added search-related translations (zh-CN, en-US)
- Added remote settings description translations

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -165,6 +165,12 @@
     "close": "Close",
     "navLabel": "Settings categories",
     "loading": "Loading...",
+    "search": {
+      "placeholder": "Search settings...",
+      "ariaLabel": "Search settings",
+      "clear": "Clear search",
+      "noResults": "No matching settings found"
+    },
     "status": {
       "saving": "Saving...",
       "saved": "Saved",
@@ -177,6 +183,9 @@
       "remote": "Remote Servers",
       "shortcuts": "Shortcuts",
       "advanced": "Advanced"
+    },
+    "remote": {
+      "description": "Configure remote server connections. Run Codex on remote hosts via SSH."
     },
     "general": {
       "language": "Language",
