--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -165,6 +165,12 @@
     "close": "关闭",
     "navLabel": "设置分类",
     "loading": "加载中...",
+    "search": {
+      "placeholder": "搜索设置...",
+      "ariaLabel": "搜索设置",
+      "clear": "清除搜索",
+      "noResults": "未找到匹配的设置"
+    },
     "status": {
       "saving": "保存中...",
       "saved": "已保存",
@@ -177,6 +183,9 @@
       "remote": "远程服务器",
       "shortcuts": "快捷键",
       "advanced": "高级"
+    },
+    "remote": {
+      "description": "配置远程服务器连接，支持通过 SSH 在远程主机上运行 Codex"
     },
     "general": {
       "language": "语言",
