feat: implement Settings Panel Phase 3 - Advanced Features
Data Import/Export:
- Export settings to JSON file with metadata (exportedAt, exportVersion)
- Import settings from JSON file with validation
- Merge imported settings with defaults for compatibility
- Download file with date-stamped filename
- Error handling and user feedback

Extension Points (Future-ready):
- SettingsExtensionPoint interface for plugin settings panels
- SettingsExtensionProps for extension component props
- SettingsExtensionRegistry interface for managing extensions
- CloudSyncConfig interface prepared for future cloud sync
- DEFAULT_CLOUD_SYNC_CONFIG with sensible defaults

Keyboard Shortcuts Hook:
- useSettingsShortcuts hook for global keyboard shortcuts
- Parse shortcut strings (CmdOrCtrl+key format)
- Match keyboard events to shortcuts
- Support for Mac/Windows modifier key differences
- Skip shortcuts when typing in inputs

i18n:
- Added data management section translations
- Export/import success/error messages

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -254,6 +254,17 @@
       "logLevelDescription": "Set the application log verbosity",
       "maxSessionHistory": "Session history limit",
       "maxSessionHistoryDescription": "Maximum number of sessions to keep",
+      "dataManagement": "Data Management",
+      "exportSettings": "Export Settings",
+      "exportSettingsDescription": "Export current settings to a JSON file for backup or migration to another device",
+      "exportSettingsButton": "Export Settings",
+      "exportSuccess": "Export successful",
+      "exportError": "Export failed",
+      "importSettings": "Import Settings",
+      "importSettingsDescription": "Import settings from a JSON file. This will overwrite current configuration",
+      "importSettingsButton": "Import Settings",
+      "importSuccess": "Settings imported successfully. Changes will take effect shortly",
+      "importError": "Import failed: Invalid file format",
       "actions": "Actions",
       "clearCache": "Clear cache",
       "clearCacheDescription": "Clear local cache data including settings and session history",
