--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -254,6 +254,17 @@
       "logLevelDescription": "设置应用程序的日志详细程度",
       "maxSessionHistory": "会话历史限制",
       "maxSessionHistoryDescription": "保留的最大会话数量",
+      "dataManagement": "数据管理",
+      "exportSettings": "导出设置",
+      "exportSettingsDescription": "将当前设置导出为 JSON 文件，可用于备份或迁移到其他设备",
+      "exportSettingsButton": "导出设置",
+      "exportSuccess": "导出成功",
+      "exportError": "导出失败",
+      "importSettings": "导入设置",
+      "importSettingsDescription": "从 JSON 文件导入设置，将覆盖当前配置",
+      "importSettingsButton": "导入设置",
+      "importSuccess": "设置导入成功，即将生效",
+      "importError": "导入失败：文件格式无效",
       "actions": "操作",
       "clearCache": "清除缓存",
       "clearCacheDescription": "清除本地缓存数据，包括设置和会话历史",
