fix(i18n): 完善国际化适配，修复硬编码文本
- 修复 zh-CN.json 中未翻译的英文文本 (switchMode, agentOptions, thinking, working)
- 为 RemoteServerManager 组件添加完整的 i18n 支持
- 修复 RemoteServerPanel 组件中的硬编码 aria-label 和按钮文本
- 修复 AdvancedSettings 组件中日志级别选项的国际化
- 新增 settings.remoteServer 和 settings.logLevel 翻译键

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -187,6 +187,52 @@
     "remote": {
       "description": "Configure remote server connections. Run Codex on remote hosts via SSH."
     },
+    "remoteServer": {
+      "title": "Remote Servers",
+      "addTitle": "Add Remote Server",
+      "serverName": "Server Name",
+      "serverNameRequired": "Server Name *",
+      "host": "Host",
+      "hostRequired": "Host *",
+      "port": "Port",
+      "username": "Username",
+      "usernameRequired": "Username *",
+      "authMethod": "Authentication Method",
+      "sshAgent": "SSH Agent (Recommended)",
+      "sshKeyFile": "SSH Key File",
+      "privateKeyPath": "Private Key Path",
+      "passphrase": "Passphrase (Optional)",
+      "cancel": "Cancel",
+      "addServer": "Add Server",
+      "addServerShort": "+ Add Server",
+      "adding": "Adding...",
+      "removeConfirm": "Are you sure you want to remove this server?",
+      "loading": "Loading servers...",
+      "empty": "No remote servers configured",
+      "emptyHint": "Add a server to connect to remote development environments",
+      "authType": "Auth",
+      "testing": "Testing...",
+      "testConnection": "Test Connection",
+      "remove": "Remove",
+      "connectionFailed": "Connection failed",
+      "failedToAdd": "Failed to add server",
+      "fillRequired": "Please fill in all required fields",
+      "close": "Close",
+      "resizePanel": "Resize remote server panel",
+      "placeholder": {
+        "serverName": "My Server",
+        "host": "example.com",
+        "username": "user",
+        "privateKey": "~/.ssh/id_rsa",
+        "passphrase": "Leave empty if not required"
+      }
+    },
+    "logLevel": {
+      "error": "Error",
+      "warn": "Warning",
+      "info": "Info",
+      "debug": "Debug"
+    },
     "general": {
       "language": "Language",
       "languageDescription": "Choose the interface language",
