fix: 移除模型选择的硬编码，改为动态获取
- ModelSettings: 添加 availableModels prop 接收动态模型列表
- SettingsModal: 传递 availableModels 给 ModelSettings
- App.tsx: 将 modelOptions 传递给 SettingsModal
- settings.ts: 使用 DEFAULT_MODEL_ID 常量替代硬编码默认值
- 添加 i18n 翻译: selectModel, noModelsAvailable
- 添加 CSS 样式: settings-item__placeholder

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -250,6 +250,8 @@
     "model": {
       "defaultModel": "Default model",
       "defaultModelDescription": "Select the default AI model to use",
+      "selectModel": "Select a model",
+      "noModelsAvailable": "Start a session first to see available models",
       "apiProvider": "API Provider",
       "apiProviderDescription": "Choose the API service provider",
       "customProvider": "Custom",
