Move model discovery to settings to avoid first-session dependency

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -247,17 +247,27 @@
       "defaultModelDescription": "Select the default AI model to use",
       "selectModel": "Select a model",
       "noModelsAvailable": "Start a session first to see available models",
+      "configTitle": "Model source / Codex config",
+      "configDescription": "Configuration loaded from ~/.codex/config.toml and auth.json",
+      "configLoading": "Loading Codex config",
+      "configMissing": "No local Codex config found",
+      "providerId": "Provider ID",
+      "baseUrl": "Base URL",
+      "envKey": "Env key",
+      "configPath": "Config path",
+      "authFile": "Auth file",
+      "authFileFound": "Found",
+      "authFileMissing": "Missing",
+      "fetchModels": "Fetch models",
+      "fetching": "Fetching...",
+      "fetchUpdated": "Updated at {{time}}",
       "apiProvider": "API Provider",
       "apiProviderDescription": "Choose the API service provider",
       "customProvider": "Custom",
       "apiBaseUrl": "API Base URL",
       "apiBaseUrlDescription": "Custom API endpoint URL",
       "apiKey": "API Key",
-      "apiKeyDescription": "API key for authentication",
-      "maxTokens": "Max Tokens",
-      "maxTokensDescription": "Maximum tokens per request",
-      "temperature": "Temperature",
-      "temperatureDescription": "Controls output randomness. Higher values mean more random output"
+      "apiKeyDescription": "API key for authentication"
     },
     "approval": {
       "defaultMode": "Default approval mode",
