--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -247,17 +247,27 @@
       "defaultModelDescription": "选择默认使用的 AI 模型",
       "selectModel": "请选择模型",
       "noModelsAvailable": "需要先启动一个会话才能显示可用模型",
+      "configTitle": "模型来源 / Codex 配置",
+      "configDescription": "从 ~/.codex/config.toml 与 auth.json 读取的配置",
+      "configLoading": "正在加载 Codex 配置",
+      "configMissing": "未找到本地 Codex 配置",
+      "providerId": "Provider ID",
+      "baseUrl": "Base URL",
+      "envKey": "Env Key",
+      "configPath": "配置路径",
+      "authFile": "认证文件",
+      "authFileFound": "已找到",
+      "authFileMissing": "未找到",
+      "fetchModels": "获取模型",
+      "fetching": "获取中...",
+      "fetchUpdated": "已更新：{{time}}",
       "apiProvider": "API 提供商",
       "apiProviderDescription": "选择 API 服务提供商",
       "customProvider": "自定义",
       "apiBaseUrl": "API 地址",
       "apiBaseUrlDescription": "自定义 API 端点地址",
       "apiKey": "API 密钥",
-      "apiKeyDescription": "用于身份验证的 API 密钥",
-      "maxTokens": "最大 Token 数",
-      "maxTokensDescription": "单次请求的最大 token 限制",
-      "temperature": "温度",
-      "temperatureDescription": "控制输出的随机性，值越高越随机"
+      "apiKeyDescription": "用于身份验证的 API 密钥"
     },
     "approval": {
       "defaultMode": "默认审批模式",
