feat: implement message queue for prompt queuing
- Add useMessageQueue hook to manage message queue per session
- Add QueueIndicator component to display queued messages
- Integrate queue functionality into App.tsx and ChatContainer
- Allow user to continue typing while AI is generating
- Auto-send next queued message when current task completes
- Add ClockIcon and CloseIcon to Icon components
- Add i18n support for queue-related strings (zh-CN/en-US)

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -5,6 +5,13 @@
     "rename": "Rename",
     "delete": "Delete"
   },
+  "queue": {
+    "title": "{{count}} message(s) queued",
+    "clearAll": "Clear all",
+    "remove": "Remove",
+    "queued": "Queued",
+    "willSendNext": "Will be sent after current task completes"
+  },
   "chat": {
     "empty": "Start a new conversation",
     "defaultCwd": "Default directory",
