--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -5,6 +5,13 @@
     "rename": "重命名",
     "delete": "删除"
   },
+  "queue": {
+    "title": "{{count}} 条消息排队中",
+    "clearAll": "清空队列",
+    "remove": "移除",
+    "queued": "已加入队列",
+    "willSendNext": "将在当前任务完成后发送"
+  },
   "chat": {
     "empty": "开始新的对话",
     "defaultCwd": "默认目录",
