feat: Implement file browser side panel
- Add list_local_directory Tauri command
- Create FileBrowserPanel component
- Replace Tools side action with File Explorer
- Integrate file browser into ChatContainer and App
- Add localization

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -36,9 +36,18 @@
   "chatSideActions": {
     "label": "Quick actions",
     "files": "Files",
-    "tools": "Tools",
+    "explorer": "File Explorer",
     "terminal": "Terminal",
     "remote": "Remote Servers"
+  },
+  "fileBrowser": {
+    "title": "File Explorer",
+    "close": "Close",
+    "loading": "Loading...",
+    "empty": "Empty directory",
+    "navigateUp": "Go up",
+    "refresh": "Refresh",
+    "resizePanel": "Resize explorer"
   },
   "terminalPanel": {
     "title": "Terminal",
