Integrate Plan component into ChatMessage and event system

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -17,7 +17,8 @@
     "defaultCwd": "Default directory",
     "cwdLocked": "Conversation in progress, cannot change working directory",
     "newSessionTitle": "New chat",
-    "filePrefix": "File: {{path}}"
+    "filePrefix": "File: {{path}}",
+    "planTitle": "Plan"
   },
   "chatInput": {
     "slashTitle": "Slash commands",
