feat: show finished state label in working component

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -117,6 +117,7 @@
   },
   "working": {
     "title": "Working",
+    "finished": "Completed",
     "inProgress": "In progress",
     "itemCount_one": "{{count}} item",
     "itemCount_other": "{{count}} items",
