Finalize git history panel

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -38,6 +38,7 @@
     "label": "Quick actions",
     "files": "Files",
     "explorer": "File Explorer",
+    "git": "Source Control",
     "terminal": "Terminal",
     "remote": "Remote Servers"
   },
@@ -55,6 +56,42 @@
     "close": "Close",
     "resizeAria": "Resize terminal",
     "starting": "Starting terminal..."
+  },
+  "gitPanel": {
+    "title": "Source Control",
+    "close": "Close",
+    "refresh": "Refresh",
+    "sync": "Sync",
+    "syncing": "Syncing...",
+    "branch": "Branch",
+    "ahead": "Ahead",
+    "behind": "Behind",
+    "changes": "Changes",
+    "staged": "Staged Changes",
+    "diff": "Diff",
+    "commit": "Commit",
+    "commitPlaceholder": "Commit message",
+    "stage": "Stage",
+    "unstage": "Unstage",
+    "discard": "Discard",
+    "stageAll": "Stage all",
+    "discardAll": "Discard all",
+    "switchBranch": "Switch Branch",
+    "createBranch": "Create Branch",
+    "history": "History",
+    "loading": "Loading...",
+    "noChanges": "No changes",
+    "noHistory": "No commits yet",
+    "noRepo": "No git repository detected",
+    "remoteNotSupported": "Git is only available for local folders.",
+    "diffPlaceholder": "Select a file to view changes",
+    "checkoutPrompt": "Switch to branch",
+    "createBranchPrompt": "Create new branch",
+    "confirmDiscardAll": "Discard all changes?",
+    "confirmReset": "Hard reset to this commit?",
+    "contextCheckout": "Checkout commit",
+    "contextReset": "Reset to here",
+    "resize": "Resize source control panel"
   },
   "models": {
     "gpt52High": "gpt-5.2 (high)",
