--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -38,6 +38,7 @@
     "label": "快捷操作",
     "files": "文件",
     "explorer": "文件浏览器",
+    "git": "源代码管理",
     "terminal": "终端",
     "remote": "远程服务器"
   },
@@ -55,6 +56,42 @@
     "close": "关闭",
     "resizeAria": "调整终端宽度",
     "starting": "正在启动终端..."
+  },
+  "gitPanel": {
+    "title": "源代码管理",
+    "close": "关闭",
+    "refresh": "刷新",
+    "sync": "同步",
+    "syncing": "同步中...",
+    "branch": "分支",
+    "ahead": "领先",
+    "behind": "落后",
+    "changes": "变更",
+    "staged": "已暂存",
+    "diff": "差异",
+    "commit": "提交",
+    "commitPlaceholder": "提交信息",
+    "stage": "暂存",
+    "unstage": "取消暂存",
+    "discard": "丢弃",
+    "stageAll": "全部暂存",
+    "discardAll": "全部丢弃",
+    "switchBranch": "切换分支",
+    "createBranch": "新建分支",
+    "history": "历史",
+    "loading": "加载中...",
+    "noChanges": "没有变更",
+    "noHistory": "暂无提交历史",
+    "noRepo": "未检测到 Git 仓库",
+    "remoteNotSupported": "Git 仅支持本地目录。",
+    "diffPlaceholder": "选择文件查看差异",
+    "checkoutPrompt": "切换到分支",
+    "createBranchPrompt": "新建分支名称",
+    "confirmDiscardAll": "确认丢弃所有变更？",
+    "confirmReset": "确认硬重置到该提交？",
+    "contextCheckout": "检出该提交",
+    "contextReset": "重置到这里",
+    "resize": "调整源代码管理面板大小"
   },
   "models": {
     "gpt52High": "gpt-5.2 (high)",
