Localize config editor note

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -305,6 +305,7 @@
       "configDescription": "Configuration loaded from ~/.codex/config.toml and auth.json",
       "configLoading": "Loading Codex config",
       "configMissing": "No local Codex config found",
+      "configUnavailableWeb": "Config unavailable in web preview",
       "providerId": "Provider ID",
       "baseUrl": "Base URL",
       "envKey": "Env key",
